# calc

./: CMakeLists.txt
src/: calc  econ_func.h  lex.yy.c  lexer.l  mem.h  parser.tab.c  parser.tab.h  parser.y
